Deployment/resources-server/k3s/ingress/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect
  namespace: default
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect@kubernetescrd
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/issuer: "letsencrypt"
spec:
  tls:
  - hosts:
    - document.thinkmay.net
    - resources.thinkmay.net
    secretName: secret-tls
  rules:

  - host: document.thinkmay.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: document
            port:
              number: 80

  - host: resources.thinkmay.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: resource
            port:
              number: 80
